--- a/index.html
+++ b/index.html
@@ -358,16 +358,6 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 
   </style>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-39377010-13', 'auto');
-    ga('send', 'pageview');
-
-  </script>
 </head>
 <body>
     <div class="progress">
@@ -380,98 +370,81 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   學生計算機年會
 </h1>
 <br /></p>
-<h2 id="sitcon-">SITCON 共同發起人</h2>
-<h2 id="denny-huang">Denny Huang</h2>
+<h2 id="sitcon">SITCON</h2>
+<h2 id="leon">Leon</h2>
 </section>
   </div>
   <div class="slide hidden" id="slide-2">
-    <section class="slide-content"><h3 id="who-am-i-">Who am I ?</h3>
-<p><br /></p>
-<h2 style="font-size: 60px">
-  <b>Denny Huang</b>
-</h2>
-
-<ul>
-<li><p>SITCON 2013, 2014 總召</p>
-</li>
-<li><p>Rayark Inc.</p>
-</li>
-<li><p><a href="https://denny.one/" target="_blank">About me</a></p>
-</li>
-</ul>
-</section>
-  </div>
-  <div class="slide hidden" id="slide-3">
     <section class="slide-content"><h1 id="-">緣起</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-4">
+  <div class="slide hidden" id="slide-3">
     <section class="slide-content"><h1 id="coscup">COSCUP</h1>
 <h2 id="-">開源人年會</h2>
 </section>
   </div>
-  <div class="slide hidden" id="slide-5">
+  <div class="slide hidden" id="slide-4">
     <section class="slide-content"><p><br /></p>
 <div align="center">
   <img style="width: 600px" src="img/begin.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-6">
+  <div class="slide hidden" id="slide-5">
     <section class="slide-content"><h3 id="2012-08-26">2012 / 08 / 26</h3>
 <div align="center">
   <img style="height: 450px" src="img/first-meeting.png" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-7">
+  <div class="slide hidden" id="slide-6">
     <section class="slide-content"><div align="center">
   <img style="height:400px" src="./img/sitcon-logo.svg" />
   <h2>Students’ Information Technology Conference</h2>
   <a href="http://sitcon.org/">https://sitcon.org</a>
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-8">
+  <div class="slide hidden" id="slide-7">
     <section class="slide-content"><h1 id="-">給學生一個發表的舞台。</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-9">
+  <div class="slide hidden" id="slide-8">
     <section class="slide-content"><h1 id="-">研討會</h1>
 <h2 id="since-2013">Since 2013</h2>
 <h2 id="200-1300-">200 人 -&gt; 1300 人</h2>
 </section>
   </div>
-  <div class="slide hidden" id="slide-10">
+  <div class="slide hidden" id="slide-9">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="img/sitcon2013_jserv.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-11">
+  <div class="slide hidden" id="slide-10">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="img/sitcon2013_reg.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-12">
+  <div class="slide hidden" id="slide-11">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="img/sitcon2013_people.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-13">
+  <div class="slide hidden" id="slide-12">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="./img/green-shirt.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-14">
+  <div class="slide hidden" id="slide-13">
     <section class="slide-content"><h1 id="-">讓一群熱愛資訊的人有交流的機會。</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-15">
+  <div class="slide hidden" id="slide-14">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="./img/2019kn.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-16">
+  <div class="slide hidden" id="slide-15">
     <section class="slide-content"><iframe width="800" height="600" src="https://www.youtube.com/embed/rlCiwaC-UUE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></section>
   </div>
-  <div class="slide hidden" id="slide-17">
+  <div class="slide hidden" id="slide-16">
     <section class="slide-content"><h3 id="-">年會主題</h3>
 <ul>
 <li>X: Cat in a Maze</li>
@@ -486,7 +459,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-18">
+  <div class="slide hidden" id="slide-17">
     <section class="slide-content"><h3 id="-">論壇</h3>
 <ul>
 <li>2021: 同學你這樣學寫程式？現今教育體系下的程式學習</li>
@@ -501,12 +474,12 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-19">
+  <div class="slide hidden" id="slide-18">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="./img/2019panel.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-20">
+  <div class="slide hidden" id="slide-19">
     <section class="slide-content"><h3 id="-">投稿議程</h3>
 <ul>
 <li><p>Presentation / Talk</p>
@@ -522,101 +495,101 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-21">
+  <div class="slide hidden" id="slide-20">
     <section class="slide-content"><h1 id="sitcon-2022">SITCON 2022</h1>
 <h2 id="2022-09-04">2022 / 09 / 04</h2>
 <h2 id="-">中央研究院 人文社會科學館</h2>
 </section>
   </div>
-  <div class="slide hidden" id="slide-22">
+  <div class="slide hidden" id="slide-21">
     <section class="slide-content"><h1 id="workshop">Workshop</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-23">
+  <div class="slide hidden" id="slide-22">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="./img/workshop1.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-24">
+  <div class="slide hidden" id="slide-23">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="./img/workshop2.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-25">
+  <div class="slide hidden" id="slide-24">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="./img/security-workshop.png" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-26">
+  <div class="slide hidden" id="slide-25">
     <section class="slide-content"><p><img src="./img/tosw1.jpg"></p>
 </section>
   </div>
-  <div class="slide hidden" id="slide-27">
+  <div class="slide hidden" id="slide-26">
     <section class="slide-content"><p><img src="./img/tosw2.jpg"></p>
 </section>
   </div>
-  <div class="slide hidden" id="slide-28">
+  <div class="slide hidden" id="slide-27">
     <section class="slide-content"><p><img src="./img/tosw3.jpg"></p>
 </section>
   </div>
-  <div class="slide hidden" id="slide-29">
+  <div class="slide hidden" id="slide-28">
     <section class="slide-content"><h1 id="summer-camp">Summer Camp</h1>
 <h2 id="since-2014">Since 2014</h2>
 </section>
   </div>
-  <div class="slide hidden" id="slide-30">
+  <div class="slide hidden" id="slide-29">
     <section class="slide-content"><h1 id="-">營火晚會</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-31">
+  <div class="slide hidden" id="slide-30">
     <section class="slide-content"><h1 id="-"><del>營火晚會</del></h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-32">
+  <div class="slide hidden" id="slide-31">
     <section class="slide-content"><h1 id="-">黑客松</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-33">
+  <div class="slide hidden" id="slide-32">
     <section class="slide-content"><h1 id="-">夜教</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-34">
+  <div class="slide hidden" id="slide-33">
     <section class="slide-content"><h1 id="-"><del>夜教</del></h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-35">
+  <div class="slide hidden" id="slide-34">
     <section class="slide-content"><h1 id="-">密室逃脫</h1>
 <h2 id="-">結合資訊</h2>
 </section>
   </div>
-  <div class="slide hidden" id="slide-36">
+  <div class="slide hidden" id="slide-35">
     <section class="slide-content"><h1 id="-">社群闖關</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-37">
+  <div class="slide hidden" id="slide-36">
     <section class="slide-content"><h1 id="-">視界咖啡館</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-38">
+  <div class="slide hidden" id="slide-37">
     <section class="slide-content"><iframe width="800" height="600" src="https://www.youtube.com/embed/oAtiOrpj6DQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></section>
   </div>
-  <div class="slide hidden" id="slide-39">
+  <div class="slide hidden" id="slide-38">
     <section class="slide-content"><p><h1>
   <img src="./img/HackGen_Logo.png" />
 </h1></p>
 <h2 id="http-hackgen-sitcon-org-"><a href="http://hackgen.sitcon.org/">http://hackgen.sitcon.org/</a></h2>
 </section>
   </div>
-  <div class="slide hidden" id="slide-40">
+  <div class="slide hidden" id="slide-39">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="./img/hackgen-nccu.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-41">
+  <div class="slide hidden" id="slide-40">
     <section class="slide-content"><h1 id="-">定期聚</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-42">
+  <div class="slide hidden" id="slide-41">
     <section class="slide-content"><h3 id="-">定期聚</h3>
 <ul>
 <li>台北</li>
@@ -629,62 +602,62 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 </ul>
 </section>
   </div>
-  <div class="slide hidden" id="slide-43">
+  <div class="slide hidden" id="slide-42">
     <section class="slide-content"><h1 id="hour-of-code">Hour of Code</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-44">
+  <div class="slide hidden" id="slide-43">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="./img/2018hoc.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-45">
+  <div class="slide hidden" id="slide-44">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="./img/2015hoc3.jpg" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-46">
+  <div class="slide hidden" id="slide-45">
     <section class="slide-content"><h1 id="-">海外影響</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-47">
+  <div class="slide hidden" id="slide-46">
     <section class="slide-content"><h3 id="-">香港</h3>
 <div align="center">
   <img style="height: 450px" src="./img/hk.jpg" />
   <h2>SITCON x HK</h2>
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-48">
+  <div class="slide hidden" id="slide-47">
     <section class="slide-content"><h3 id="-">中國</h3>
 <div align="center">
   <img style="height: 450px" src="./img/cn.jpg" />
   <h2>SOSCON 學生開源年會</h2>
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-49">
+  <div class="slide hidden" id="slide-48">
     <section class="slide-content"><div align="center">
   <img style="width: 800px" src="./img/ceo.png" />
 </div></section>
   </div>
-  <div class="slide hidden" id="slide-50">
+  <div class="slide hidden" id="slide-49">
     <section class="slide-content"><h1 style="font-size: 72px">
   SITCON 籌備 / 開源專案
 </h1></section>
   </div>
-  <div class="slide hidden" id="slide-51">
+  <div class="slide hidden" id="slide-50">
     <section class="slide-content"><h1 id="-">傳統?</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-52">
+  <div class="slide hidden" id="slide-51">
     <section class="slide-content"><h1 id="-">目的</h1>
 </section>
   </div>
-  <div class="slide hidden" id="slide-53">
+  <div class="slide hidden" id="slide-52">
     <section class="slide-content"><h1 id="-">紀錄</h1>
 <h2 id="mailing-list-google-drive-hackmd"><a href="https://groups.google.com/g/sitcon-general">Mailing List</a> / <a href="https://drive.google.com/drive/folders/0AIx9UW7aBiDgUk9PVA">Google Drive</a> / <a href="https://hackmd.io/@SITCON">HackMD</a></h2>
 </section>
   </div>
-  <div class="slide hidden" id="slide-54">
+  <div class="slide hidden" id="slide-53">
     <section class="slide-content"><h1 style="font-size:72px">Thanks for listening</h1></section>
   </div>
 
