modify sub title

--- a/index.html
+++ b/index.html
@@ -370,8 +370,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   學生計算機年會
 </h1>
 <br /></p>
-<h2 id="sitcon">SITCON</h2>
-<h2 id="leon">Leon</h2>
+<h2 id="sitcon-x-leon">SITCON X 副召 Leon</h2>
 </section>
   </div>
   <div class="slide hidden" id="slide-2">
